# docs/swagger.json
@@ -375,8 +375,15 @@
         "handlers.SignUpRequest": {
             "type": "object",
             "properties": {
+                "birth_date": {
+                    "description": "Nhận vào string \"YYYY-MM-DD\" để validate",
+                    "type": "string"
+                },
                 "email": {
                     "type": "string"
+                },
+                "gender": {
+                    "type": "integer"
                 },
                 "name": {
                     "type": "string"
@@ -404,13 +411,19 @@
                     "type": "string"
                 },
                 "birth_date": {
+                    "description": "Vẫn là *string \"YYYY-MM-DD\"",
                     "type": "string"
                 },
                 "gender": {
-                    "type": "string"
+                    "description": "Đổi sang *int",
+                    "type": "integer"
                 },
                 "name": {
                     "type": "string"
+                },
+                "target_gender": {
+                    "description": "Thêm *int",
+                    "type": "integer"
                 }
             }
         },
@@ -433,13 +446,16 @@
                     "type": "string"
                 },
                 "gender": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "id": {
                     "type": "string"
                 },
                 "name": {
                     "type": "string"
+                },
+                "target_gender": {
+                    "type": "integer"
                 },
                 "updated_at": {
                     "type": "string"
